# sh-module-bundler

./: .dockerignore  .gitignore  Dockerfile  Makefile  NOTICE  README.md  action.yml  entrypoint.py  pyproject.toml  readme_generator.py  readme_template.md.j2  sh_workspace.code-workspace
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  publish.yml
tests/: test_entrypoint.py
